[1074002] Fix toolbar overlapping when scroll

--- a/src/layout/resources/group.css
+++ b/src/layout/resources/group.css
@@ -38,7 +38,7 @@
 .layout-group__head {
     position: sticky;
     top: 0;
-    z-index: 1;
+    z-index: 56;
     display: flex;
     align-items: center;
     flex: none;
